Ticket: #no ticket SubTicket: # Component: Changes: 1.Fix bug: the success message of clearing recent search results is covered by modal dialog mask.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/BootstrapModal.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/BootstrapModal.less
@@ -374,7 +374,7 @@ button * {
 
 		&.modal.in {
 			overflow: hidden;
-			z-index: 15000;
+			z-index: 1040;
 		}
 	}
 }
